--- a/ui/templates/ui.html
+++ b/ui/templates/ui.html
@@ -1,16 +1,3 @@
-{% load ladder %}
-{% load static %}
-<html>
-    <head>
-        <link rel="stylesheet" href="{% static 'css/style.css' %}">
-    </head>
-    <body>
-        <div class="container">
-            <div>
-                <img src="{% static 'img/oscrbanner-slim-dark-label.png' %}" class='banner'></img>
-            </div>
-            <div class="content content-background">
-            </div>
-        </div>
-    </body>
-</html>
+{% extends 'template.html' %}
+{% block 'content' %}
+{% endblock %}
