--- a/combatlog/templates/combatlog.html
+++ b/combatlog/templates/combatlog.html
@@ -5,7 +5,7 @@
 <div data-bs-theme="dark">
     <h2 style="display: inline-block;">{{object.metadata.map}} {% if object.metadata.difficulty is not None %}({{object.metadata.difficulty}}){% endif %}</h2>&nbsp;
     <h5 style="display: inline-block;">{{object.metadata.date_time|date:"DATETIME_FORMAT"}}</h5>
-    <div class="float-end"><img src="{% static 'img/download.svg' %}" data-toggle="tooltip" data-placement="top" title="Download"></img></div>
+    <a href="{% url 'combatlog-download' object.pk %}"><div class="float-end"><img src="{% static 'img/download.svg' %}" data-toggle="tooltip" data-placement="top" title="Download"></img></div></a>
     <hr>
     <table class="table table-dark table-hover table-sm table-responsive">
         <thead>
