Revert CSS changes

--- a/ui/templates/template.html
+++ b/ui/templates/template.html
@@ -11,7 +11,7 @@
         <title>OSCR | Open Source Combatlog Reader</title>
     </head>
     <body>
-        <div class="ui-container container-fluid g-0">
+        <div class="container-fluid ui-container g-0 fill-height">
             <div>
                 <a href="{% url 'ui' %}"><img src="{% static 'img/oscrbanner-slim-dark-label.png' %}" class='banner'></img></a>
             </div>
