--- a/ui/static/css/style.css
+++ b/ui/static/css/style.css
@@ -17,12 +17,15 @@ html, body {
 }
 
 .ui-container {
+    display: flex;
+    flex-direction: column;
     min-height: 100vh;
 }
 
 .ui-content {
     margin: .5rem;
     padding: .5rem;
+    flex: 1;
     border-radius: .5rem;
 }
 
@@ -67,3 +70,4 @@ table, td, tr, th {
     display: inline-flex;
     box-shadow: 0 0 0 .25rem rgba(200, 41, 52, .25);
 }
+
