--- a/ladder/templates/ladder_entry.html
+++ b/ladder/templates/ladder_entry.html
@@ -93,7 +93,7 @@
                         <th scope="col">DPS</th>
                         <th scope="col">Damage</th>
                         <th scope="col">Time</th>
-                        <th scope="col">Build</th>
+                        <th scope="col">Highest Damage Ability</th>
                         <th scope="col">Group Size</th>
                         <th scope="col"></th>
                     </tr>
