--- a/ladder/templates/ladder_entry.html
+++ b/ladder/templates/ladder_entry.html
@@ -85,6 +85,9 @@
                         value="0">2+ Players</option>
                 </select>
             </div>
+            <div class="col col-md-2" style="display: none;">
+                <input type="text" class="form-control form-control-sm" id="inputPlayer" name="search" placeholder="" value="1">
+            </div>
             <div class="col col-md-2">
                 <button type="submit" class="btn btn-primary btn-sm float-end">Search</button>
             </div>
