Quick and Dirty Metrics

--- a/ui/templates/template.html
+++ b/ui/templates/template.html
@@ -29,7 +29,7 @@
                     <span class="m-1">|</span>
                     <span class="m-1"><a href="https://discord.gg/stobuilds" target="_blank" class="link-light link-underline-opacity-25">STOBuilds Discord</a></span>
                     <span class="m-1">|</span>
-                    <span class="m-1"><a href="#" class="link-light link-underline-opacity-25">Statistics</a></span>
+                    <span class="m-1"><a href="{% url 'stats' %}" class="link-light link-underline-opacity-25">Statistics</a></span>
                 </div>
                 <hr>
                 <div class="row">
